--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,13 @@ dist
 
 # TernJS port file
 .tern-port
+
+# yarn
+.yarn/*
+.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+# !.yarn/versions
+install-state.gz
