chore: setup next-pwa

--- a/apps/nextjs-css-vanilla-extract/package.json
+++ b/apps/nextjs-css-vanilla-extract/package.json
@@ -2,10 +2,9 @@
   "private": true,
   "name": "nextjs-css-vanilla-extract",
   "scripts": {
-    "dev": "next dev",
+    "dev": "open http://localhost:3000 && next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@vanilla-extract/css": "1.9.0",
